@@ -15,18 +15,18 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 eddb7047c79938e9a1ff11cd6df7e4c52a680661 Build.PL
-SHA1 f2335a49b8cd7f87ab0c6ae0a28a79948929c892 ChangeLog
+SHA1 d29037e6fae372a89d6557d5a91af1c8092bfe73 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 b60e58dabe06df867326f357a6d73f197d15daab MANIFEST
-SHA1 4a364ab3ee6e9a0fbc4d70326ccbaff31a814400 META.yml
+SHA1 e47094df59e77e73d6598184df61532195653501 META.yml
 SHA1 f66acde86158aa6f0acaea3454b97faeedd21d74 Makefile.PL
 SHA1 46b0a200babcf01cc6d2138fb294e020238c8430 README
-SHA1 6a3daa651334ac1e5d1e1a9b8f8463dd422fba34 lib/Term/Menus.pm
+SHA1 c0c9cdea0b07680960040dcb1ab131d3ad2b7ada lib/Term/Menus.pm
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.1 (Cygwin)
 
-iD8DBQFEmqSgm9P/2BC89ZsRAhdnAJ0aIG3138nKEJK4JusKaJ3R+XbB2ACdGlIt
-rkIYvwXQOEvrnULXVBkDIJU=
-=0MMf
+iD8DBQFEyNxPm9P/2BC89ZsRAvpXAJ4jVwiZCw+ChHKwFyliot1t/vTiygCfUvQX
+d5srmqkYtptpxOt+WQnohZs=
+=6FYa
 -----END PGP SIGNATURE-----
