@@ -1,3 +1,12 @@
+2006-07-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 1.14 released.
+
+        * Fixed clear for ActiveState perl
+
+        * Fixed inconsistent behavior between 'One' and 'Many' Selection
+          setting when using sub-menus on one or more items
+
 2006-06-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 1.13 released.
